--- a/src/components/input_animado/input_animado.css
+++ b/src/components/input_animado/input_animado.css
@@ -3,7 +3,7 @@
     position:relative;
     padding: 3em 0 0 0;
 }
-input{
+.input input{
     display: block;
     width: 100%;
     outline: none;
