--- a/src/components/modal/modal.css
+++ b/src/components/modal/modal.css
@@ -7,10 +7,11 @@
     bottom: 0;
 }
 .box-modal{
-    width: 20vw;
+    width: 22vw;
     background-color: var(--color-white);
     position: relative;
-    padding: 0 0 1em 0;
+    padding: 0 1em 1em 1em;
+    box-shadow: 2px 3px 10px 2px rgba(0, 0, 0, 0.8);
 }
 .close-modal{
     position: absolute;
@@ -18,15 +19,17 @@
     top:0.7em;
     font-size: 2em;
     color: rgba(255,0,0, 0.5);
+    transition: .4s;
 
 }
 .close-modal:hover{
     color: rgba(255,0,0, 1)
+
 }
 .title-modal{
     line-height: 5em;
     font-weight: 500;
-    font-size: 2em;
+    font-size: 1.5em;
     text-align: center;
 }
 .body-modal{
