--- a/src/index.css
+++ b/src/index.css
@@ -359,10 +359,56 @@ template {
 #id{
  position: relative; 
 }
+.w-100{
+  width:100%
+}
+.mt-2{
+  margin-top: 2em;
+}
 :root{
   font-size: 11px;
   --background-modal :  rgba(0,0,0,.4);
   --color-white:#FFF;
+}
+.btn{
+  padding: 1em;
+  border-radius: 1em;
+  margin:1em;
+  font-size: 1.2em;
+  font-weight: 500;
+  transition: .4s;
+}
+.btn:focus{
+  outline: none;
+}
+.btn-red{
+  background-color: rgba(240,0,0,1);
+  color: #FFF;
+}
+.btn-red:hover{
+  background-color: rgba(200,0,0,1);
+}
+
+.btn-green{
+  background-color: rgba(50, 220,50, 1);
+  color: #FFF;
+}
+.btn-green:hover{
+  background-color:rgba(0,200,0,1) ;
+}
+.btn-disable{
+  background-color: #707070;
+  color: #FFF;
+
+}
+.btn-blue{
+  background-color: rgba(0,0 ,240 , 0.7);
+  color: white;
+  
+}
+.btn-blue:hover{
+  background-color: rgba(0,0 ,240 , 1);
+  color: white;
 }
 @media screen and (max-width: 500)
 {
